add javascript and API functionality

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE=HTML>
+<!DOCTYPE HTML>
+<html lang='en'>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width-device-width, initial-scale= 1.0" >
+        <title>Doggo Display</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>Doggo Display!</h1>
+        <form>
+            <fieldset>
+                <legend>Display Doggos</legend>
+                <label for="num-pics">Number of Photos</label>
+                <input type="number" id="num-pics" name="num-pics" value="3" required>
+                <button class="submit">Show me the doggos</button>
+            </fieldset>
+        </form>
+        <section class="image-display"></section>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="index.js"></script>
+    </body>
+</html>   
